--- a/EDA_with_Titanic_Dataset.ipynb
+++ b/EDA_with_Titanic_Dataset.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMrevVYXFQ4THvGePFGHqRM",
+      "authorship_tag": "ABX9TyNRAoT1dv8BCix2wZ6E2Ecf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2809,6 +2809,89 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculate survival rate\n",
+        "survival_rate = df['Survived'].mean()\n",
+        "\n",
+        "# Print the survival rate\n",
+        "print(f\"Survival Rate: {survival_rate:.2%}\")  # Format as percentage with 2 decimal places"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e2iKROE-vySm",
+        "outputId": "85d52f54-8e58-436c-c8db-eae9c673798b"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Survival Rate: 38.25%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Summary : Exploratory Data Analysis (EDA) performed on the Titanic dataset\n",
+        "\n",
+        "\n",
+        "Data Structure and Summary:\n",
+        "\n",
+        "1. Shape: The dataset has 891 rows (passengers) and 12 columns (features).\n",
+        "2. Data Types: Features include a mix of numerical (e.g., Age, Fare) and categorical (e.g., Sex, Embarked) data types.\n",
+        "3. Missing Values: Several features like 'Age', 'Cabin', and 'Embarked' had missing values. 'Age' was imputed with the median, 'Cabin' was dropped due to a high number of missing values, and rows with missing 'Embarked' values were removed.\n",
+        "4. Summary Statistics: df.describe() provided descriptive statistics (mean, median, quartiles, etc.) for numerical features.\n",
+        "\n",
+        "\n",
+        "Key Insights from Visualizations:\n",
+        "\n",
+        "1. Survival Rate: Approximately 38% of passengers survived the Titanic disaster.\n",
+        "2. Survival by Gender: A significantly higher proportion of females survived compared to males.\n",
+        "3. Age Distribution: The age distribution was slightly skewed, with a higher concentration of passengers in their 20s and 30s.\n",
+        "4. Survival by Pclass: Survival appeared to be associated with passenger class, with higher-class passengers having a better chance of survival.\n",
+        "5. Correlation: Features like 'Fare' and 'Pclass' showed some correlation, which is expected.\n",
+        "\n",
+        "\n",
+        "\n",
+        "Data Preparation:\n",
+        "\n",
+        "1. Missing Value Handling: Missing values were addressed through imputation and removal, ensuring data completeness for analysis.\n",
+        "2. Categorical Encoding: Categorical features like 'Sex' and 'Embarked' were encoded into numerical representations using techniques like mapping and one-hot encoding, making them suitable for modeling.\n",
+        "\n",
+        "Overall:\n",
+        "\n",
+        "The EDA provided valuable insights into the Titanic dataset, highlighting patterns in passenger demographics, survival rates, and relationships between features. The data preparation steps ensured the dataset was ready for further analysis or modeling tasks.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "c95M9PJNuv7G"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note: Mean vs Median vs Mode-\n",
+        "1. Mean : The average of all values in a dataset.\n",
+        "2. Median : The middle value in a dataset when it's ordered.\n",
+        "3. The most frequent value in a dataset.\n",
+        "\n",
+        "***********************************************\n",
+        "\n",
+        "1. Use mean when the data is normally distributed and has no outliers.\n",
+        "2. Use median when the data has outliers or is skewed.\n",
+        "3. Use mode when dealing with categorical or discrete numerical data to find the most frequent value."
+      ],
+      "metadata": {
+        "id": "bFjtSqN3wacV"
+      }
     }
   ]
 }
